@@ -1,3 +1,5 @@
+HEAD
+	+ Added external AD field to LDAP information model
 3.5.2
 	+ Fix sssd bug not finding users and groups
 	+ Deprecate _schemasAdded redis key, checking if schema is extended in
